# nrw-freestyle-cup-registration

./: .gitignore  Cargo.toml  README.md  makefile
.github/: dependabot.yml
.github/workflows/: build-binary.yml  pr-test.yml
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/rollup-lib/: consts.js  getGitStatus.js
frontend/src/: index.html
frontend/src/css/: style.css
frontend/src/ts/: apiClient.ts  main.ts  utils.ts
frontend/src/ts/components/: cup-app.ts
frontend/src/ts/components/elements/: cup-centered-icon-box.ts  cup-clock.ts  cup-club-act-manager.ts  cup-club-judge-manager.ts  cup-club-manager.ts  cup-context-club.ts  (+7 more)
frontend/src/ts/contexts/: club.ts  systemStatus.ts  user.ts
migrations/: 20241214134701_initial-db.down.sql  20241214134701_initial-db.up.sql  20241226144908_juryanmeldung.down.sql  20241226144908_juryanmeldung.up.sql  20241227103854_paar-sonderpokal.down.sql  20241227103854_paar-sonderpokal.up.sql  20250103130049_acts.down.sql  20250103130049_acts.up.sql  20250202112605_act-description.down.sql  20250202112605_act-description.up.sql  20250204171815_club-payment.down.sql  20250204171815_club-payment.up.sql  20250218184041_categories.up.sql  20250218215117_view-acts.down.sql  20250218215117_view-acts.up.sql  20250222123255_act-view-clubname.down.sql  20250222123255_act-view-clubname.up.sql  20250225160443_act-song-check.down.sql  20250225160443_act-song-check.up.sql  20250225185326_order.down.sql  20250225185326_order.up.sql  20250225212521_correct-acts-view.up.sql  20250225215819_fix-categories.up.sql  20250301211814_timeplan.down.sql  20250301211814_timeplan.up.sql  20260316192643_correct-competition-date.down.sql  20260316192643_correct-competition-date.up.sql
src/: http_server.rs  jwt.rs  lib.rs  mailer.rs  reloadable_sqlite.rs  system_status.rs  templates.rs  utils.rs
src/http_server/: routes.rs
src/http_server/extractor/: auth.rs
src/http_server/routes/: command.rs  http_types.rs  query.rs
src/http_server/routes/command/: add_category.rs  add_club_judge.rs  add_club_starter.rs  add_timeplan_entry.rs  create_club.rs  delete_category.rs  delete_club_judge.rs  delete_club_starter.rs  delete_timeplan_entry.rs  edit_category.rs  edit_club_act.rs  edit_club_judge.rs  edit_club_starter.rs  edit_timeplan_entry.rs  login.rs  logout.rs  move_category_down.rs  move_category_up.rs  move_timeplan_down.rs  move_timeplan_up.rs  register.rs  reload_db.rs  rename_club.rs  request_password_reset.rs  resend_mail_validation.rs  reset_password.rs  save_act_song.rs  set_act_order.rs  set_payment.rs  set_song_checked.rs  timeplan_backward.rs  timeplan_forward.rs  verify_email.rs
src/http_server/routes/query/: get_act.rs  get_club.rs  get_startlist_csv.rs  get_system_status.rs  list_acts.rs  list_categories.rs  list_club_acts.rs  list_club_judges.rs  list_club_starters.rs  list_judges.rs  list_starters.rs  list_timeplan.rs  list_users.rs  predict_timeplan.rs  startlist.rs  whoami.rs
templates/emails/: password-reset-mail.j2  verify-mail.j2
(+22 files in other folders)
