[package]
name = "nrw-freestyle-cup-registration"
version = "0.1.0"
edition = "2024"
default-run = "nrw-freestyle-cup-registration"

[[bin]]
name = "nrw-freestyle-cup-registration"
path = "src/bin/registration_server.rs"

[[bin]]
name = "gen_openapi"
path = "src/bin/gen_openapi.rs"

[dependencies]
anyhow = "1"
askama = "0.14.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-embed = "0.1.0"
axum-extra = { version = "0.12", features = ["cookie"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = { version = "0.11.19", features = [
  "builder",
  "hostname",
  "pool",
  "rustls-tls",
  "smtp-transport",
  "tokio1-rustls-tls",
], default-features = false }
password-auth = "1.0.0"
rust-embed = "8.9.0"
serde = "1"
serde_json = "1"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "sqlite",
  "time",
  "uuid",
] }
thiserror = "2"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = [
  "cors",
  "fs",
  "request-id",
  "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
utoipa = { version = "5", features = [
  "axum_extras",
  "debug",
  "time",
  "uuid",
  "yaml",
] }
utoipa-axum = { version = "0.2", features = ["debug"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
